--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "firebase-tools": "^8.7.0",
     "prettier": "2.0.5"
   },
   "keywords": [
