--- a/package.json
+++ b/package.json
@@ -1,28 +1,84 @@
 {
-  "name": "solutionops",
-  "type": "module",
-  "version": "2.0.0",
-  "private": true,
+  "name": "@solutionops/source",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "format": "npx prettier --write ."
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "test:e2e": "npx nx run e2e:e2e",
+    "lint": "npx nx run-many --target=lint",
+    "format": "npx nx format:write --all",
+    "validate:full": "run-s lint format test build test:e2e",
+    "validate:commit": "run-s lint format",
+    "prepare": "npx husky install"
   },
+  "private": true,
   "dependencies": {
-    "astro": "^1.8.0"
+    "@nx/next": "17.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "next": "14.0.3",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "eslint": "^8.30.0",
-    "eslint-config-standard-with-typescript": "^24.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "prettier": "2.8.1",
-    "typescript": "^4.9.4"
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@nx/devkit": "17.1.3",
+    "@nx/eslint": "17.1.3",
+    "@nx/eslint-plugin": "17.1.3",
+    "@nx/jest": "17.1.3",
+    "@nx/js": "17.1.3",
+    "@nx/playwright": "17.1.3",
+    "@nx/react": "17.1.3",
+    "@nx/vite": "17.1.3",
+    "@nx/workspace": "17.1.3",
+    "@playwright/test": "^1.40.0",
+    "@swc-node/register": "~1.6.8",
+    "@swc/core": "~1.3.99",
+    "@testing-library/react": "14.1.2",
+    "@types/jest": "^29.5.10",
+    "@types/node": "20.9.4",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "@vitejs/plugin-react": "~4.0.0",
+    "@vitest/coverage-v8": "~0.34.6",
+    "@vitest/ui": "~0.34.6",
+    "autoprefixer": "10.4.13",
+    "babel-jest": "^29.7.0",
+    "eslint": "~8.54.0",
+    "eslint-config-next": "14.0.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-playwright": "^0.18.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "~22.1.0",
+    "npm-run-all": "^4.1.5",
+    "nx": "17.1.3",
+    "postcss": "8.4.21",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwindcss": "3.2.7",
+    "ts-jest": "^29.1.1",
+    "ts-node": "10.9.1",
+    "typescript": "~5.3.2",
+    "vite": "~4.3.9",
+    "vite-plugin-dts": "~2.3.0",
+    "vitest": "~0.34.6"
   }
 }
