--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,13 +10,20 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@solutionops/components": ["components/src"],
-      "@solutionops/utils": ["utils/src"]
+      "@solutionops/components": [
+        "components/src"
+      ],
+      "@solutionops/utils": [
+        "utils/src"
+      ]
     }
   },
   "exclude": [
